# mjpeg_webserver

./: .gitignore  Makefile  README.md  configure  mjpeg_webserver.conf
esp32/: .gitignore  CMakeLists.txt  httpd.cnf  sdkconfig  setenv.sh
esp32/main/: CMakeLists.txt  esp32_capture.c  esp32_capture.h  main.c  sdmmc.c  sdmmc.h  wifi.c  wifi.h
src/: alias.h  avi.h  avi_parse.c  avi_parse.h  avi_play.c  avi_play.h  capture.h  cgi_handler.h  config.c  config.h  file_io.c  file_io.h  functions.h  general.c  general.h  globals.h  http_headers.c  http_headers.h  jpeg_compress.c  jpeg_compress.h  mime_types.c  mime_types.h  mjpeg_webserver.c  network_io.c  network_io.h  plugin.h  server.c  server.h  set_signals.c  set_signals.h  url_utils.c  url_utils.h  user.c  user.h  v4l2_capture.c  version.h  vfw_capture.c  video.h
test_plugin/: Makefile  test_plugin.c
